made changes in design n added content

--- a/cybersecu.html
+++ b/cybersecu.html
@@ -65,9 +65,9 @@
                 <div class="collapse navbar-collapse" id="navbar-menu">
                     <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOut">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="index.html">About Us</a></li>
-                        <li><a href="index.html">Courses</a></li>
-                        <li><a href="index.html">Contact Us</a></li>
+                        <li><a href="index.html#about">About Us</a></li>
+                        <li><a href="index.html#courses">Courses</a></li>
+                        <li><a href="index.html#contact">Contact Us</a></li>
                         <!-- <li><a href="#">Registration</a></li> -->
                         <li><a style="cursor:pointer;" data-toggle="modal" data-target="#login">Login</a></li>
                     </ul>
@@ -84,7 +84,7 @@
                 <!-- SLIDE  -->
                 <li data-transition="fade">
                     <!-- MAIN IMAGE -->
-                    <img src="images/CS_banner.png" alt="" data-bgposition="center center" data-bgfit="cover"
+                    <img src="images/cyber_banner.jpg" alt="" data-bgposition="center center" data-bgfit="cover"
                         data-bgparallax="10" class="rev-slidebg">
                     <!-- LAYER NR. 1 -->
                     <!-- <div class="tp-caption tp-resizeme" data-x="['center','center','center','center']"
@@ -123,13 +123,12 @@
             <div class="row">
                 <div class="col-md-12 priorty wow fadeInLeft text-center" data-wow-delay="300ms">
                     <h2 class="heading bottom25">Cyber Security<span class="divider-center"></span></h2>
-                    <p class="half_space" style="text-align:justify;">Cyber security across various digital channels of
-                        the communication and transactions is of paramount importance to businesses. Increase in
-                        criminal activities through computer network has led to the focus towards protecting sensitive
-                        business and personal information, as well as safeguard national security. Cyber-attacks are
-                        being reported every day, and it is becoming more important for organizations and businesses to
-                        train their employees on cyber security. So that they can identify the threats and take steps to
-                        mitigate them.
+                    <p class="half_space" style="text-align:justify;">This course introduces the basic cyber security
+                        concepts, enable you to identity root causes of vulnerabilities in a network system and
+                        distinguish them from the threats from both inside and outside. We will introduce the risk
+                        management framework for analysing the risks in a network system and apply the basic security
+                        design principles to protect the data and secure the computer systems. This course will have
+                        case studies which will help you to get clear picture on cyber security.
                     </p>
 
                     <!-- <p style="text-align: justify;"> Cybercrime denotes criminal activity including internet, computers
@@ -162,8 +161,7 @@
                     <h2 class="heading bottom25">Skills Required<span class="divider-left"></span></h2>
                     <ul style="font-family: 'Roboto', sans-serif;">
                         <li><i class="design fa fa-hand-o-right"></i>Basic knowledge on computer technologies</li>
-                        <li><i class="design fa fa-hand-o-right"></i>Malware analysis and reversing</li>
-                        <li><i class="design fa fa-hand-o-right"></i>Cloud security and security analysis</li>
+                        <li><i class="design fa fa-hand-o-right"></i>Security fundamentals</li>
                     </ul>
                 </div>
             </div>
@@ -175,7 +173,10 @@
             <div class="row">
                 <div class="col-md-8">
                     <h2 class="heading bottom25">Market Forecast<span class="divider-left"></span></h2>
-                    <p class="half_space" style="text-align:justify;">Research conducted by Morgan Stanley suggests that
+                    <p style="text-align: justify;">Cyber Security Market is estimated to grow at a CAGR of 13.5% over
+                        the forecast years (2019 - 2027), with cyber-attacks gaining traction as fastest growing type of
+                        crime across the globe, says absolute markets insights.</p>
+                    <!-- <p class="half_space" style="text-align:justify;">Research conducted by Morgan Stanley suggests that
                         the cybersecurity market could grow by more than four times the overall information technology
                         spending by 2020. In addition, research conducted by Accenture, says that cybercrime costs for
                         organizations continue to rise as the average cost of cybercrime per organization was up
@@ -184,10 +185,10 @@
                     <p class="half_space" style="text-align:justify;">Cybersecurity Ventures is predicting slightly
                         higher growth rates, at about 12-15% year-over-year through 2021, which is higher than the 8-10%
                         being predicted by other industry analysts.
-                    </p>
+                    </p> -->
                 </div>
                 <div class="col-md-4">
-                    <img src="images/cyber-security.jpg" class="img-responsive">
+                    <img src="images/cyber_security.jpg" class="img-responsive">
                 </div>
             </div>
         </div>
@@ -209,9 +210,10 @@
                             <div class="col-md-4 col-sm-6 col-xs-12"><img src="images/subjects/cyber_security1.jpg"
                                     class="img-responsive">
                                 <h4 class="bottom15"><strong>Information security fundamentals</strong></h4>
-                                <p class="bottom15" style="text-align: justify;">This subject introduces how this
-                                    technique is used to protect organization’s valuable resources, such as information
-                                    and assets.
+                                <p class="bottom15" style="text-align: justify;">This subject provides an insight into
+                                    the concept of the effective information protection services. The audience will
+                                    learn how to protect organization’s valuable resources, such as information and
+                                    assets.
                                 </p>
                             </div>
                         </div>
@@ -220,7 +222,9 @@
                             <div class="col-md-4 col-sm-6 col-xs-12"><img src="images/subjects/cyber_security2.jpg"
                                     class="img-responsive">
                                 <h4 class="bottom15"><strong>IT applications and data security</strong></h4>
-                                <p class="bottom15" style="text-align: justify;">
+                                <p class="bottom15" style="text-align: justify;">This subject will help you to learn IT
+                                    application security. Introduction to software development, application security,
+                                    input validation and sensitive data handling are presented here.
                                 </p>
                             </div>
                         </div>
@@ -229,8 +233,9 @@
                             <div class="col-md-4 col-sm-6 col-xs-12"><img src="images/subjects/cyber_security3.jpg"
                                     class="img-responsive">
                                 <h4 class="bottom15"><strong>Ethical hacking and penetration testing</strong></h4>
-                                <p class="bottom15" style="text-align: justify;">This subject provide information about
-                                    website penetration, internal network penetration, Wi-Fi penetration and others.
+                                <p class="bottom15" style="text-align: justify;">This subject gives an overview on how
+                                    to use the ethical hacking techniques and how to conduct a professional penetration
+                                    test workflow using the Swiss Army Knife operating system Kali Linux.
                                 </p>
                             </div>
                         </div>
@@ -266,36 +271,36 @@
 
     <!--login modal-->
     <div class="container">
-            <div class="modal fade" id="login" role="dialog" style="padding-right:0px;">
-                <div class="modal-dialog modal-sm">
-                    <div class="modal-content">
-                        <div class="modal-header headerColor">
-                            <button type="button" class="close modalClose" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title" style="color: white;">Sign-in</h4>
-                        </div>
-                        <div class="modal-body">
-                            <div class="row text-center">
-                                <div class="col-md-12" style="text-align: center;">
-                                    <a href="http://knowbots.phemesoft.com/" target="_blank" data-placement="bottom"
-                                        title="Click to login">
-                                        <img src="images/knowbots_logo.png" alt="Knowbots" class="logo">
-                                    </a>
-                                </div>
-                                <!-- <div class="col-md-6" style="text-align: center;">
+        <div class="modal fade" id="login" role="dialog" style="padding-right:0px;">
+            <div class="modal-dialog modal-sm">
+                <div class="modal-content">
+                    <div class="modal-header headerColor">
+                        <button type="button" class="close modalClose" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title" style="color: white;">Sign-in</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row text-center">
+                            <div class="col-md-12" style="text-align: center;">
+                                <a href="http://knowbots.phemesoft.com/" target="_blank" data-placement="bottom"
+                                    title="Click to login">
+                                    <img src="images/knowbots_logo.png" alt="Knowbots" class="logo">
+                                </a>
+                            </div>
+                            <!-- <div class="col-md-6" style="text-align: center;">
                                     <a href="http://www.phemesoft.com/" target="_blank" data-placement="bottom"
                                         title="Click to login">
                                         <img src="images/CATIA-logo.png" alt="CATIA" class="logo ">
                                     </a>
                                 </div> -->
-                            </div>
                         </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-basic" data-dismiss="modal">Cancel</a>
-                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-basic" data-dismiss="modal">Cancel</a>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
     <!-- modal end -->
 
 
@@ -313,9 +318,9 @@
                     <h3 class="heading bottom25">Quick Links<span class="divider-left"></span></h3>
                     <ul class="links">
                         <li><a href="index.html"><i class="icon-chevron-small-right"></i>Home</a></li>
-                        <li><a href="index.html"><i class="icon-chevron-small-right"></i>About Us</a></li>
-                        <li><a href="index.html"><i class="icon-chevron-small-right"></i>Courses</a></li>
-                        <li><a href="index.html"><i class="icon-chevron-small-right"></i>Contact Us</a></li>
+                        <li><a href="index.html#about"><i class="icon-chevron-small-right"></i>About Us</a></li>
+                        <li><a href="index.html#courses"><i class="icon-chevron-small-right"></i>Courses</a></li>
+                        <li><a href="index.html#contact"><i class="icon-chevron-small-right"></i>Contact Us</a></li>
                     </ul>
                 </div>
 
@@ -360,6 +365,14 @@
     <script src="js/revolution.extension.video.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/functions.js"></script>
+
+    <script>
+        var revapi;
+        revapi = jQuery("#rev_slider").revolution({
+            gridwidth: [1170, 960, 750, 480],
+            gridheight: [480, 600, 500, 390],
+        });
+    </script>
 
 </body>
 
