--- a/datascience.html
+++ b/datascience.html
@@ -65,9 +65,9 @@
                 <div class="collapse navbar-collapse" id="navbar-menu">
                     <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOut">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="index.html">About Us</a></li>
-                        <li><a href="index.html">Courses</a></li>
-                        <li><a href="index.html">Contact Us</a></li>
+                        <li><a href="index.html#about">About Us</a></li>
+                        <li><a href="index.html#courses">Courses</a></li>
+                        <li><a href="index.html#contact">Contact Us</a></li>
                         <!-- <li><a href="#">Registration</a></li> -->
                         <li><a style="cursor:pointer;" data-toggle="modal" data-target="#login">Login</a></li>
                     </ul>
@@ -125,22 +125,18 @@
             <div class="row">
                 <div class="col-md-12 priorty wow fadeInLeft text-center" data-wow-delay="300ms">
                     <h2 class="heading bottom25">Data Science<span class="divider-center"></span></h2>
-                    <p class="half_space" style="text-align:justify;">Data science is a "concept to unify statistics,
-                        data analysis, machine learning and their related methods" in order to "understand and analyze
-                        actual phenomena" with data. Data Science is the future of Artificial Intelligence. Therefore,
-                        it is very important to understand what is Data Science and how can it add value to your
-                        business.
-                        Data science is a multi-disciplinary field that uses scientific methods, processes, algorithms
-                        and systems to extract knowledge and insights from structured and unstructured data. It empowers
-                        professionals with data management technologies like Hadoop, R, Flume, Sqoop, Machine learning,
-                        Mahout etc.
+                    <p class="half_space" style="text-align:justify;">This course helps to gain an understanding on what
+                        Data Science is and how it can add value to your business. The concept of advanced analytical
+                        tools, various data sources, algorithms for processing and analysing the data is also presented
+                        here. This course empowers professionals with data management tools such as R studio, Tableau
+                        etc.
                     </p>
-                    <p style="text-align: justify;">
+                    <!-- <p style="text-align: justify;">
                         This data is generated from different sources like financial logs, text files, multimedia forms,
                         sensors, and instruments. Simple BI tools are not capable of processing this huge volume and
                         variety of data. This is why we need more complex and advanced analytical tools and algorithms
                         for processing, analyzing and drawing meaningful insights out of it.
-                    </p>
+                    </p> -->
                 </div>
             </div>
         </div>
@@ -153,11 +149,10 @@
                 <div class="col-md-12">
                     <h2 class="heading bottom25">Skills Required<span class="divider-left"></span></h2>
                     <ul style="font-family: 'Roboto', sans-serif;">
-                        <li><i class="design fa fa-hand-o-right"></i>Data scientists collect and analyse data and
-                            communicate actionable insights</li>
-                        <li><i class="design fa fa-hand-o-right"></i>It requires a strong knowledge of data analytics
-                            including software tools, programming languages like Python or R, and data visualization
-                            skills to better communicate findings</li>
+                        <li><i class="design fa fa-hand-o-right"></i>Basic knowledge on data analytics </li>
+                        <li><i class="design fa fa-hand-o-right"></i>Pprogramming languages like
+                            Python or R</li>
+                        <li><i class="design fa fa-hand-o-right"></i>Data visualization </li>
                     </ul>
                 </div>
             </div>
@@ -169,7 +164,12 @@
             <div class="row">
                 <div class="col-md-8">
                     <h2 class="heading bottom25">Market Forecast<span class="divider-left"></span></h2>
-                    <p class="half_space" style="text-align:justify;">IDC says that worldwide revenues for big data and
+                    <p style="text-align: justify;">
+                        IDC says that worldwide revenues for big data and business analytics will grow from $130.1
+                        billion in 2019 to more than $203 billion in 2020, at a compound annual growth rate (CAGR) of
+                        11.7%.
+                    </p>
+                    <!-- <p class="half_space" style="text-align:justify;">IDC says that worldwide revenues for big data and
                         business analytics will grow from $130.1 billion in 2016 to more than $203 billion in 2020, at a
                         CAGR of 11.7%. In addition to being the industry with the largest
                         investment in big data and business analytics solutions, banking
@@ -182,7 +182,7 @@
                         methods for valuing their data. “Data monetization” will become a major source of revenues, as
                         the world will create 180 zettabytes of data in 2025, up from less than 10 zettabytes in 2015,
                         according to IDC.
-                    </p>
+                    </p> -->
                 </div>
                 <div class="col-md-4">
                     <img src="images/data_science.jpg" class="img-responsive">
@@ -207,9 +207,9 @@
                             <div class="col-md-4 col-sm-6 col-xs-12"><img src="images/subjects/DSS1.jpg"
                                     class="img-responsive">
                                 <h4 class="bottom15"><strong>Introduction to data science</strong></h4>
-                                <p class="bottom15" style="text-align: justify">This subject introduces the concept of
-                                    Decision Support Systems and
-                                    provides knowledge on a Data Warehouse, multi-dimensional analysis.
+                                <p class="bottom15" style="text-align: justify">This subject will give you a complete
+                                    picture of data. Here the audience will learn about analytics of data, the usage of
+                                    tools like R studio, advance excel, tableau etc.
                                 </p>
                             </div>
                         </div>
@@ -218,9 +218,10 @@
                             <div class="col-md-4 col-sm-6 col-xs-12"><img src="images/subjects/DSS2.jpg"
                                     class="img-responsive">
                                 <h4 class="bottom15"><strong>Data mining and predictive analytics</strong></h4>
-                                <p class="bottom15" style="text-align: justify">This subject introduces the basic
-                                    knowledge of data mining
-                                    concepts and KDD process model and also the concepts behind data preparation.
+                                <p class="bottom15" style="text-align: justify">This subject provides an overview on
+                                    hidden patterns of data through machine learning and sophisticated algorithms. This
+                                    also make us to understand how to extract hidden value from newly discovered
+                                    patterns using business knowledge.
                                 </p>
                             </div>
                         </div>
@@ -229,10 +230,10 @@
                             <div class="col-md-4 col-sm-6 col-xs-12"><img src="images/subjects/DSS3.jpg"
                                     class="img-responsive">
                                 <h4 class="bottom15"><strong>Descriptive analytics</strong></h4>
-                                <p class="bottom15" style="text-align: justify">This subject introduces how analytics
-                                    are powering
-                                    consumer applications and creating a new opportunity for entrepreneurship for
-                                    analytics.
+                                <p class="bottom15" style="text-align: justify">This subject describes about the raw
+                                    data and make it something that is interpretable by humans. This subject helps us to
+                                    learn from past behaviours/event that had occurred and understand how they might
+                                    influence future outcomes.
                                 </p>
                             </div>
                         </div>
@@ -268,36 +269,36 @@
 
     <!--login modal-->
     <div class="container">
-            <div class="modal fade" id="login" role="dialog" style="padding-right:0px;">
-                <div class="modal-dialog modal-sm">
-                    <div class="modal-content">
-                        <div class="modal-header headerColor">
-                            <button type="button" class="close modalClose" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title" style="color: white;">Sign-in</h4>
-                        </div>
-                        <div class="modal-body">
-                            <div class="row text-center">
-                                <div class="col-md-12" style="text-align: center;">
-                                    <a href="http://knowbots.phemesoft.com/" target="_blank" data-placement="bottom"
-                                        title="Click to login">
-                                        <img src="images/knowbots_logo.png" alt="Knowbots" class="logo">
-                                    </a>
-                                </div>
-                                <!-- <div class="col-md-6" style="text-align: center;">
+        <div class="modal fade" id="login" role="dialog" style="padding-right:0px;">
+            <div class="modal-dialog modal-sm">
+                <div class="modal-content">
+                    <div class="modal-header headerColor">
+                        <button type="button" class="close modalClose" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title" style="color: white;">Sign-in</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row text-center">
+                            <div class="col-md-12" style="text-align: center;">
+                                <a href="http://knowbots.phemesoft.com/" target="_blank" data-placement="bottom"
+                                    title="Click to login">
+                                    <img src="images/knowbots_logo.png" alt="Knowbots" class="logo">
+                                </a>
+                            </div>
+                            <!-- <div class="col-md-6" style="text-align: center;">
                                     <a href="http://www.phemesoft.com/" target="_blank" data-placement="bottom"
                                         title="Click to login">
                                         <img src="images/CATIA-logo.png" alt="CATIA" class="logo ">
                                     </a>
                                 </div> -->
-                            </div>
                         </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-basic" data-dismiss="modal">Cancel</a>
-                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-basic" data-dismiss="modal">Cancel</a>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
     <!-- modal end -->
 
 
@@ -315,9 +316,9 @@
                     <h3 class="heading bottom25">Quick Links<span class="divider-left"></span></h3>
                     <ul class="links">
                         <li><a href="index.html"><i class="icon-chevron-small-right"></i>Home</a></li>
-                        <li><a href="index.html"><i class="icon-chevron-small-right"></i>About Us</a></li>
-                        <li><a href="index.html"><i class="icon-chevron-small-right"></i>Courses</a></li>
-                        <li><a href="index.html"><i class="icon-chevron-small-right"></i>Contact Us</a></li>
+                        <li><a href="index.html#about"><i class="icon-chevron-small-right"></i>About Us</a></li>
+                        <li><a href="index.html#courses"><i class="icon-chevron-small-right"></i>Courses</a></li>
+                        <li><a href="index.html#contact"><i class="icon-chevron-small-right"></i>Contact Us</a></li>
                     </ul>
                 </div>
 
@@ -362,6 +363,14 @@
     <script src="js/revolution.extension.video.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/functions.js"></script>
+
+    <script>
+        var revapi;
+        revapi = jQuery("#rev_slider").revolution({
+            gridwidth: [1170, 960, 750, 480],
+            gridheight: [480, 600, 500, 390],
+        });
+    </script>
 
 </body>
 
