--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
             data-responsive_offset="on" data-visibility="['on','on','off','off']" data-transform_idle="o:1;"
             data-transform_in="opacity:0;s:1000;e:Power2.easeInOut;" data-transform_out="opacity:0;s:1000;s:1000;"
             data-start="1500">
-            <p style="font-style: italic;">What you get by achieving your goals is not as important as what you become by achieving your goals</p>
+            <p style="font-style: italic;">What you get by achieving your goals is not as important as what you become
+              by achieving your goals</p>
           </div>
           <div class="tp-caption  tp-resizeme" data-x="['center','center','center','center']"
             data-hoffset="['0','0','0','0']" data-y="['450','390','350','250']" data-voffset="['0','0','0','0']"
@@ -125,7 +126,6 @@
             data-transform_in="z:0;rX:0;rY:0;rZ:0;sX:0.9;sY:0.9;skX:0;skY:0;opacity:0;s:1500;e:Power3.easeInOut;"
             data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;"
             data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="800">
-            <!-- <h1>Only the impossible is worth doing</h1> -->
             <h1>Your Library Is Your Paradise</h1>
           </div>
           <div class="tp-caption tp-resizeme" data-x="['center','center','center','center']"
@@ -133,7 +133,8 @@
             data-responsive_offset="on" data-visibility="['on','on','off','off']" data-transform_idle="o:1;"
             data-transform_in="opacity:0;s:1000;e:Power2.easeInOut;" data-transform_out="opacity:0;s:1000;s:1000;"
             data-start="1500">
-            <p style="font-style: italic;">When the awareness of what is achievable brushes your life, your journey has begun</p>
+            <p style="font-style: italic;">When the awareness of what is achievable brushes your life, your journey has
+              begun</p>
           </div>
           <div class="tp-caption  tp-resizeme" data-x="['center','center','center','center']"
             data-hoffset="['0','0','0','0']" data-y="['450','390','350','250']" data-voffset="['0','0','0','0']"
@@ -245,13 +246,14 @@
       <div class="row">
         <div class="col-md-12">
           <h2 class="heading bottom25">IBM Global Certification Program <span class="divider-left"></span></h2>
-          <p class="half_space" style="text-align:justify;">The IBM ICE program provides a framework that helps to simulate a
-            real-life work environment of an IT organization on-campus. Further, the ICE online platform provides the 
-            courseware content and labs access to the students, it also tracks students’ progress and connects to industry
-            aligned projects and mentors. Ultimately the IBM ICE program aims to contribute to the transformation to a
+          <p class="half_space" style="text-align:justify;">The IBM ICE program provides a framework that helps to
+            simulate a real-life work environment of an IT organization on-campus. The ICE online platform provides the
+            courseware content and labs access to the students, it also tracks students progress and connects to
+            industry aligned projects and mentors. The IBM ICE program aims to contribute to the transformation to a
             knowledge society supporting the implementation of new educational models that will increase the alignment
             of student skills with the current/future regional market needs and IT industry trends. IBM will provide
-            global certification to the students and faculties who undergo IBM ICE program successfully.
+            global certification to the students and faculties who undergo IBM ICE program successfully. You can achieve
+            your goal to become a Data Scientist by choosing IBM ICE specialized courses offered.
           </p>
         </div>
       </div>
@@ -333,7 +335,7 @@
                         class="img-responsive"></a>
                     <h3 class="bottom15">Cyber Security</h3>
                     <p class="bottom15" style="text-align: justify;"><a href="cybersecu.html">Cyber security across
-                        various digital channels of the communication and transactions is of paramount importance 
+                        various digital channels of the communication and transactions is of paramount importance
                         to businesses </a>
                     </p>
                   </div>
@@ -462,8 +464,8 @@
               <i class="icon icon-map-pin border_radius" style="margin-top: inherit;"></i>
               <h4>Visit Us</h4>
               <p class="pColor">ASAP Community Skill Park </p>
-              <p class="pColor">NAD Rd, HMT Colony, North Kalamassery, HMT Kalamassery, 
-                  Ernakulam, Kerala 683503
+              <p class="pColor">NAD Rd, HMT Colony, North Kalamassery, HMT Kalamassery,
+                Ernakulam, Kerala 683503
               </p>
             </div>
 
@@ -483,10 +485,10 @@
           <div class="col-md-8 contact_address wow bottom25" data-wow-delay="4500ms">
             <div class="mapouter bottom25">
               <div class="gmap_canvas">
-                  <iframe id="map"
-                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62850.88182734946!2d76.40027805335045!3d10.084323505032122!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b080db6e93260dd%3A0xb466d71e3db015b3!2sASAP+Community+Skill+Park%2C+Kalamassery!5e0!3m2!1sen!2sin!4v1560226221208!5m2!1sen!2sin" 
-                   frameborder="0" allowfullscreen></iframe>
-                  <!-- <iframe id="map"
+                <iframe id="map"
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62850.88182734946!2d76.40027805335045!3d10.084323505032122!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b080db6e93260dd%3A0xb466d71e3db015b3!2sASAP+Community+Skill+Park%2C+Kalamassery!5e0!3m2!1sen!2sin!4v1560226221208!5m2!1sen!2sin"
+                  frameborder="0" allowfullscreen></iframe>
+                <!-- <iframe id="map"
                   src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d62850.88182734946!2d76.40027805335045!3d10.084323505032122!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sASAP+Community+Skill+Park++NAD+Rd%2C+HMT+Colony%2C+North+Kalamassery%2C+HMT+Kalamassery%2C+Ernakulam%2C+Kerala+683503!5e0!3m2!1sen!2sin!4v1560225280936!5m2!1sen!2sin" 
                   frameborder="0" allowfullscreen></iframe> -->
               </div>
@@ -501,35 +503,34 @@
 
   <!--login modal-->
   <div class="container">
-      <div class="modal fade" id="login" role="dialog" style="padding-right:0px;">
-          <div class="modal-dialog modal-sm">
-              <div class="modal-content">
-                  <div class="modal-header headerColor">
-                      <button type="button" class="close modalClose" data-dismiss="modal">&times;</button>
-                      <h4 class="modal-title" style="color: white;">Sign-in</h4>
-                  </div>
-                  <div class="modal-body">
-                      <div class="row text-center">
-                          <div class="col-md-12" style="text-align: center;">
-                              <a href="http://knowbots.phemesoft.com/" target="_blank" data-placement="bottom"
-                                  title="Click to login">
-                                  <img src="images/knowbots_logo.png" alt="Knowbots" class="logo">
-                              </a>
-                          </div>
-                          <!-- <div class="col-md-6" style="text-align: center;">
+    <div class="modal fade" id="login" role="dialog" style="padding-right:0px;">
+      <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+          <div class="modal-header headerColor">
+            <button type="button" class="close modalClose" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title" style="color: white;">Sign-in</h4>
+          </div>
+          <div class="modal-body">
+            <div class="row text-center">
+              <div class="col-md-12" style="text-align: center;">
+                <a href="http://knowbots.phemesoft.com/" target="_blank" data-placement="bottom" title="Click to login">
+                  <img src="images/knowbots_logo.png" alt="Knowbots" class="logo">
+                </a>
+              </div>
+              <!-- <div class="col-md-6" style="text-align: center;">
                               <a href="http://www.phemesoft.com/" target="_blank" data-placement="bottom"
                                   title="Click to login">
                                   <img src="images/CATIA-logo.png" alt="CATIA" class="logo ">
                               </a>
                           </div> -->
-                      </div>
-                  </div>
-                  <div class="modal-footer">
-                      <button type="button" class="btn btn-basic" data-dismiss="modal">Cancel</a>
-                  </div>
-              </div>
+            </div>
           </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-basic" data-dismiss="modal">Cancel</a>
+          </div>
+        </div>
       </div>
+    </div>
   </div>
   <!-- modal end -->
 
@@ -610,7 +611,8 @@
       <div class="row">
         <div class="col-md-4 col-sm-4 footer_panel bottom25">
           <h3 class="heading bottom25">About Us<span class="divider-left"></span></h3>
-          <p style="text-align: justify;">We offer the world class training facility for developing higher order skills demanded by the employer
+          <p style="text-align: justify;">We offer the world class training facility for developing higher order skills
+            demanded by the employer
             industries.</p>
           <!--<ul class="social_icon top25">
           <li><a href="#." class="facebook"><i class="fa fa-facebook"></i></a></li>
