--- a/iot.html
+++ b/iot.html
@@ -65,9 +65,9 @@
                 <div class="collapse navbar-collapse" id="navbar-menu">
                     <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOut">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="index.html">About Us</a></li>
-                        <li><a href="index.html">Courses</a></li>
-                        <li><a href="index.html">Contact Us</a></li>
+                        <li><a href="index.html#about">About Us</a></li>
+                        <li><a href="index.html#courses">Courses</a></li>
+                        <li><a href="index.html#contact">Contact Us</a></li>
                         <!-- <li><a href="#">Registration</a></li> -->
                         <li><a style="cursor:pointer;" data-toggle="modal" data-target="#login">Login</a></li>
                     </ul>
@@ -123,19 +123,16 @@
             <div class="row">
                 <div class="col-md-12 priorty wow fadeInLeft text-center" data-wow-delay="300ms">
                     <h2 class="heading bottom25">Internet of Thing<span class="divider-center"></span></h2>
-                    <p class="half_space" style="text-align:justify;">Internet of Things (IoT) is an environment of
-                        physical objects interconnected, that are accessible through the internet. The ‘thing’ in IoT
-                        could be a person, any objects. The Internet of things is the inter-networking of physical
-                        devices, vehicles, smart-devices, buildings, and other items embedded with electronics,
-                        software, sensors, actuators, and network connectivity which enable these objects to collect and
-                        exchange data.
+                    <p class="half_space" style="text-align:justify;">This course covers in-depth concepts of IoT
+                        framework, IoT ecosystem, IoT solution architecture, networking protocols and application layer
+                        protocols. This course will have case studies which will help you master the IoT technology.
                     </p>
-                    <p style="text-align: justify;">
+                    <!-- <p style="text-align: justify;">
                         From air conditioners that you can control with your smartphone to smart cars providing the
                         shortest route or your smartwatch which is tracking your daily activities. Some of the
                         applications of IoT are smart home, IoT in agriculture, connected cars, wearables,
                         transportation, digital health and smart cities.
-                    </p>
+                    </p> -->
                 </div>
             </div>
         </div>
@@ -149,9 +146,8 @@
                     <h2 class="heading bottom25">Skills Required<span class="divider-left"></span></h2>
                     <ul style="font-family: 'Roboto', sans-serif;">
                         <li><i class="design fa fa-hand-o-right"></i>Basic computer programming skills</li>
-                        <li><i class="design fa fa-hand-o-right"></i>Basic knowledge on analytics skills</li>
-                        <li><i class="design fa fa-hand-o-right"></i>Basic knowledge on user interface and gateways</li>
-                        <li><i class="design fa fa-hand-o-right"></i>Basic security knowledge</li>
+                        <li><i class="design fa fa-hand-o-right"></i>Analytics skills</li>
+                        <li><i class="design fa fa-hand-o-right"></i>User interface and gateways</li>
                     </ul>
                 </div>
             </div>
@@ -163,7 +159,11 @@
             <div class="row">
                 <div class="col-md-8">
                     <h2 class="heading bottom25">Market Forecast<span class="divider-left"></span></h2>
-                    <p class="half_space" style="text-align:justify;"> Worldwide technology spending on the Internet of
+                    <p style="text-align: justify;">IDC predicts that the consumer sector will lead IoT spending growth
+                        with a worldwide CAGR of 19%, followed closely by the insurance and healthcare provider
+                        industries.
+                    </p>
+                    <!-- <p class="half_space" style="text-align:justify;"> Worldwide technology spending on the Internet of
                         Things to reach $1.2T in 2022, attaining a Compound Annual Growth Rate (CAGR) of 13.6% over the
                         2017-2022 forecast period. IDC predicts that the consumer sector will lead IoT spending growth
                         with a worldwide CAGR of 19%, followed closely by the insurance and healthcare provider
@@ -173,7 +173,7 @@
                     <p style="text-align: justify;">The market for Industry 4.0 products and services is expected to
                         grow to $310B by 2023. IoT Analytics is predicting global spending on Industry 4.0 products and
                         services will soar from $119B in 2020 to $310B in 2023, attaining a 27.04% CAGR.
-                    </p>
+                    </p> -->
                 </div>
                 <div class="col-md-4">
                     <img src="images/IOT1.jpg" class="img-responsive">
@@ -198,9 +198,9 @@
                             <div class="col-md-4 col-sm-6 col-xs-12"><img src="images/subjects/IOTS1.png"
                                     class="img-responsive">
                                 <h4 class="bottom15"><strong>Introduction to IoT</strong></h4>
-                                <p class="bottom15" style="text-align: justify;">This subject is designed to define IoT
-                                    and technologies behind smart and intelligent devices and to learn basics of IoT
-                                    application development using Python application.
+                                <p class="bottom15" style="text-align: justify;">This subject introduces IoT and
+                                    technologies behind smart and intelligent devices and how to learn basics of IoT
+                                    application development using python application.
                                 </p>
                             </div>
                         </div>
@@ -210,7 +210,9 @@
                                     class="img-responsive">
                                 <h4 class="bottom15"><strong>IoT enterprise solution architecture</strong></h4>
                                 <p class="bottom15" style="text-align: justify;">This subject helps to gain knowledge on
-                                    providing the business solution for wide-ranging industries.
+                                    providing the business solution for wide-ranging industries. It also introduces to
+                                    the applications of IoT, types of IoT systems and solutions across wide-ranging
+                                    industries.
                                 </p>
                             </div>
                         </div>
@@ -219,8 +221,9 @@
                             <div class="col-md-4 col-sm-6 col-xs-12"><img src="images/subjects/IOTS3.jpg"
                                     class="img-responsive">
                                 <h4 class="bottom15"><strong>Industry application development using IoT</strong></h4>
-                                <p class="bottom15" style="text-align: justify;">This subject help to gain knowledge on
-                                    developing an IoT applications for various industries.
+                                <p class="bottom15" style="text-align: justify;">This subject helps to gain knowledge on
+                                    developing an IoT applications for various industries. It also provides an overview
+                                    of IoT application case studies for various industries.
                                 </p>
                             </div>
                         </div>
@@ -302,9 +305,9 @@
                     <h3 class="heading bottom25">Quick Links<span class="divider-left"></span></h3>
                     <ul class="links">
                         <li><a href="index.html"><i class="icon-chevron-small-right"></i>Home</a></li>
-                        <li><a href="index.html"><i class="icon-chevron-small-right"></i>About Us</a></li>
-                        <li><a href="index.html"><i class="icon-chevron-small-right"></i>Courses</a></li>
-                        <li><a href="index.html"><i class="icon-chevron-small-right"></i>Contact Us</a></li>
+                        <li><a href="index.html#about"><i class="icon-chevron-small-right"></i>About Us</a></li>
+                        <li><a href="index.html#courses"><i class="icon-chevron-small-right"></i>Courses</a></li>
+                        <li><a href="index.html#contact"><i class="icon-chevron-small-right"></i>Contact Us</a></li>
                     </ul>
                 </div>
 
@@ -349,6 +352,14 @@
     <script src="js/revolution.extension.video.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/functions.js"></script>
+
+    <script>
+        var revapi;
+        revapi = jQuery("#rev_slider").revolution({
+            gridwidth: [1170, 960, 750, 480],
+            gridheight: [480, 600, 500, 390],
+        });
+    </script>
 
 </body>
 
