--- a/BA.html
+++ b/BA.html
@@ -65,9 +65,9 @@
                 <div class="collapse navbar-collapse" id="navbar-menu">
                     <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOut">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="#about">About Us</a></li>
-                        <li><a href="#courses">Courses</a></li>
-                        <li><a href="#contact">Contact Us</a></li>
+                        <li><a href="index.html#about">About Us</a></li>
+                        <li><a href="index.html#courses">Courses</a></li>
+                        <li><a href="index.html#contact">Contact Us</a></li>
                         <!-- <li><a href="#">Registration</a></li> -->
                         <li><a style="cursor:pointer;" data-toggle="modal" data-target="#login">Login</a></li>
                     </ul>
@@ -125,23 +125,16 @@
             <div class="row">
                 <div class="col-md-12 priorty wow fadeInLeft text-center" data-wow-delay="300ms">
                     <h2 class="heading bottom25">Business Analytics<span class="divider-center"></span></h2>
-                    <p class="half_space" style="text-align:justify;">Business analytics refers to the skills,
-                        technologies, practices for continuous iterative exploration and investigation of past business
-                        performance to gain insight and drive business planning. Business analytics focuses on
-                        developing new insights and understanding of business performance based on data and statistical
-                        methods. In technical terms, business analytics is supposedly a quantifying mechanism, which
-                        works with big data and performs various functions of business modelling and decision making for
-                        furthering the business prospects of various companies. The information which is available in
-                        Big data to companies, is usually used by them by the method of analyzing of the same. When
-                        firms analyse this information, they are basically making use of business analytics to do so.
+                    <p class="half_space" style="text-align:justify;">This specialization introduces big data analytics
+                        for all business professionals, including those with no prior analytics experience. Here the
+                        audience will learn about the extensive use of statistical analysis, including explanatory and
+                        predictive modelling, and fact-based management to drive decision making.
                     </p>
-
-                    <p style="text-align: justify;"> This specialization provides an introduction to big data analytics
-                        for all business
-                        professionals, including those with no prior analytics experience. Business analytics makes
-                        extensive use of statistical analysis, including explanatory and predictive modeling, and
-                        fact-based management to drive decision making. Analytics may be used as input for human
-                        decisions or may drive fully automated decisions.
+                    <p style="text-align: justify;">
+                        This course also focuses on developing new insights and understanding of business performance
+                        based on data and statistical methods. The quantifying mechanism which works with big data and
+                        performs various functions of business modelling and decision making for furthering the business
+                        prospects of various companies is also presented here.
                     </p>
                 </div>
             </div>
@@ -155,11 +148,10 @@
                 <div class="col-md-12">
                     <h2 class="heading bottom25">Skills Required<span class="divider-left"></span></h2>
                     <ul style="font-family: 'Roboto', sans-serif;">
-                        <li><i class="design fa fa-hand-o-right"></i>Basic and intermediate programming concepts</li>
-                        <li><i class="design fa fa-hand-o-right"></i>How to clean and visualize data</li>
-                        <li><i class="design fa fa-hand-o-right"></i>Probability and statistics for business data
-                            analysis</li>
-                        <li><i class="design fa fa-hand-o-right"></i>Collaboration tools like git and SQL databases</li>
+                        <li><i class="design fa fa-hand-o-right"></i>Basic knowledge on data analytics </li>
+                        <li><i class="design fa fa-hand-o-right"></i>Programming languages like
+                            Python or R</li>
+                        <li><i class="design fa fa-hand-o-right"></i>Data visualization </li>
                     </ul>
                 </div>
             </div>
@@ -171,7 +163,10 @@
             <div class="row">
                 <div class="col-md-8">
                     <h2 class="heading bottom25">Market Forecast<span class="divider-left"></span></h2>
-                    <p class="half_space" style="text-align:justify;">A blockchain, originally block chain, is a growing
+                    <p style="text-align: justify;">IDC says that worldwide revenues will grow from $130.1 billion in
+                        2019 to more than $203 billion in 2020, at a compound annual growth rate (CAGR) of 11.7%.
+                    </p>
+                    <!-- <p class="half_space" style="text-align:justify;">A blockchain, originally block chain, is a growing
                         list of records, called blocks, which are linked using cryptography. Each block contains a
                         cryptographic hash of the previous block, a timestamp, and transaction data. By design, a
                         blockchain is resistant to modification of the data.
@@ -180,7 +175,7 @@
                         list of records, called blocks, which are linked using cryptography. Each block contains a
                         cryptographic hash of the previous block, a timestamp, and transaction data. By design, a
                         blockchain is resistant to modification of the data.
-                    </p>
+                    </p> -->
                 </div>
                 <div class="col-md-4">
                     <img src="images/business_analytics.jpg" class="img-responsive">
@@ -217,10 +212,9 @@
                             <div class="col-md-4 col-sm-6 col-xs-12"><img src="images/subjects/BAS2.jpg"
                                     class="img-responsive">
                                 <h4 class="bottom15"><strong>Predictive and advanced analytics</strong></h4>
-                                <p class="bottom15" style="text-align: justify;">This subject aims providing detailed
-                                    knowledge related to
-                                    data mining concepts, KDD models,
-                                    data partitioning, model evaluation.
+                                <p class="bottom15" style="text-align: justify;">This subject provides an overview of
+                                    data mining concepts, KDD models, data partitioning, model evaluation, deployment
+                                    techniques and industry-specific knowledge in data mining and data warehouse.
                                 </p>
                             </div>
                         </div>
@@ -229,10 +223,10 @@
                             <div class="col-md-4 col-sm-6 col-xs-12"><img src="images/subjects/BAS3.jpg"
                                     class="img-responsive">
                                 <h4 class="bottom15"><strong>Social and web analytics</strong></h4>
-                                <p class="bottom15" style="text-align: justify;">This subject is about learning to
-                                    develop KPIs and understanding the
-                                    standard vs Critical
-                                    metrics are the core purpose met.
+                                <p class="bottom15" style="text-align: justify;">This subject provides an understanding
+                                    of the discipline of Social Media Analytics and Web Analytics and focuses on
+                                    the impact of social media on business and how to leverage the power of social media
+                                    for better services.
                                 </p>
                             </div>
                         </div>
@@ -268,36 +262,36 @@
 
     <!--login modal-->
     <div class="container">
-            <div class="modal fade" id="login" role="dialog" style="padding-right:0px;">
-                <div class="modal-dialog modal-sm">
-                    <div class="modal-content">
-                        <div class="modal-header headerColor">
-                            <button type="button" class="close modalClose" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title" style="color: white;">Sign-in</h4>
-                        </div>
-                        <div class="modal-body">
-                            <div class="row text-center">
-                                <div class="col-md-12" style="text-align: center;">
-                                    <a href="http://knowbots.phemesoft.com/" target="_blank" data-placement="bottom"
-                                        title="Click to login">
-                                        <img src="images/knowbots_logo.png" alt="Knowbots" class="logo">
-                                    </a>
-                                </div>
-                                <!-- <div class="col-md-6" style="text-align: center;">
+        <div class="modal fade" id="login" role="dialog" style="padding-right:0px;">
+            <div class="modal-dialog modal-sm">
+                <div class="modal-content">
+                    <div class="modal-header headerColor">
+                        <button type="button" class="close modalClose" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title" style="color: white;">Sign-in</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row text-center">
+                            <div class="col-md-12" style="text-align: center;">
+                                <a href="http://knowbots.phemesoft.com/" target="_blank" data-placement="bottom"
+                                    title="Click to login">
+                                    <img src="images/knowbots_logo.png" alt="Knowbots" class="logo">
+                                </a>
+                            </div>
+                            <!-- <div class="col-md-6" style="text-align: center;">
                                     <a href="http://www.phemesoft.com/" target="_blank" data-placement="bottom"
                                         title="Click to login">
                                         <img src="images/CATIA-logo.png" alt="CATIA" class="logo ">
                                     </a>
                                 </div> -->
-                            </div>
                         </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-basic" data-dismiss="modal">Cancel</a>
-                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-basic" data-dismiss="modal">Cancel</a>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
     <!-- modal end -->
 
 
@@ -316,9 +310,9 @@
                     <h3 class="heading bottom25">Quick Links<span class="divider-left"></span></h3>
                     <ul class="links">
                         <li><a href="index.html"><i class="icon-chevron-small-right"></i>Home</a></li>
-                        <li><a href="index.html"><i class="icon-chevron-small-right"></i>About Us</a></li>
-                        <li><a href="index.html"><i class="icon-chevron-small-right"></i>Courses</a></li>
-                        <li><a href="index.html"><i class="icon-chevron-small-right"></i>Contact Us</a></li>
+                        <li><a href="index.html#about"><i class="icon-chevron-small-right"></i>About Us</a></li>
+                        <li><a href="index.html#courses"><i class="icon-chevron-small-right"></i>Courses</a></li>
+                        <li><a href="index.html#contact"><i class="icon-chevron-small-right"></i>Contact Us</a></li>
                     </ul>
                 </div>
 
@@ -363,6 +357,14 @@
     <script src="js/revolution.extension.video.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/functions.js"></script>
+
+    <script>
+        var revapi;
+        revapi = jQuery("#rev_slider").revolution({
+            gridwidth: [1170, 960, 750, 480],
+            gridheight: [480, 600, 500, 390],
+        });
+    </script>
 
 </body>
 
