--- a/artificial.html
+++ b/artificial.html
@@ -65,9 +65,9 @@
                 <div class="collapse navbar-collapse" id="navbar-menu">
                     <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOut">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="index.html">About Us</a></li>
-                        <li><a href="index.html">Courses</a></li>
-                        <li><a href="index.html">Contact Us</a></li>
+                        <li><a href="index.html#about">About Us</a></li>
+                        <li><a href="index.html#courses">Courses</a></li>
+                        <li><a href="index.html#contact">Contact Us</a></li>
                         <!-- <li><a href="#">Registration</a></li> -->
                         <li><a style="cursor:pointer;" data-toggle="modal" data-target="#login">Login</a></li>
                     </ul>
@@ -125,13 +125,12 @@
             <div class="row">
                 <div class="col-md-12 priorty wow fadeInLeft text-center" data-wow-delay="300ms">
                     <h2 class="heading bottom25">Artificial Intelligence<span class="divider-center"></span></h2>
-                    <p class="half_space" style="text-align:justify;">AI and ML have reached a new space in the
-                        industry, where the whole workplace is getting better and it is not a hypothetical scenario.
-                        Artificial intelligence makes it possible for machines to learn from experience, adjust to new
-                        inputs and perform human-like tasks. Most AI examples that you hear about today - from
-                        chess-playing computers to self-driving cars - rely heavily on deep learning and natural
-                        language processing. Using these technologies, computers can be trained to accomplish specific
-                        tasks by processing large amounts of data and recognizing patterns in the data.
+                    <p class="half_space" style="text-align:justify;">This course helps to gain knowledge on how
+                        artificial intelligence makes it possible for machines to learn from experience, adjust to new
+                        inputs and perform human-like tasks. The audience will learn about the technologies like machine
+                        learning, deep learning and natural language processing. This course also provides an overview
+                        of how these technologies are used for training the systems to accomplish the specific tasks by
+                        processing large amounts of data and recognizing patterns in the data.
                     </p>
                 </div>
             </div><br>
@@ -171,17 +170,9 @@
                 <div class="col-md-12">
                     <ul style="font-family: 'Roboto', sans-serif;">
                         <li><i class="design fa fa-hand-o-right"></i>Basic knowledge on computer technologies</li>
-                        <li><i class="design fa fa-hand-o-right"></i>Physics</li>
-                        <li><i class="design fa fa-hand-o-right"></i>Engineering</li>
-                        <li><i class="design fa fa-hand-o-right"></i>Robotics</li>
-                        <li><i class="design fa fa-hand-o-right"></i>Graphic modelling</li>
+                        <li><i class="design fa fa-hand-o-right"></i>Programming</li>
                     </ul>
                 </div>
-
-                <!-- <div class="col-md-6">
-                    <ul style="font-family: 'Roboto', sans-serif;">
-                    </ul>
-                </div> -->
             </div>
         </div>
     </section><br>
@@ -191,7 +182,11 @@
             <div class="row">
                 <div class="col-md-8">
                     <h2 class="heading bottom25">Market Forecast<span class="divider-left"></span></h2>
-                    <p class="half_space" style="text-align:justify;">Tractica forecasts that the revenue generated from
+                    <p style="text-align: justify;">Tractica forecasts that the revenue generated from the direct and
+                        indirect application of AI software is estimated to grow from $643.7 million in 2016 to $36.8
+                        billion by 2025, at a compound annual growth rate (CAGR) of 56.8%.
+                    </p>
+                    <!-- <p class="half_space" style="text-align:justify;">Tractica forecasts that the revenue generated from
                         the direct and indirect application of AI software is estimated to grow from $643.7 million in
                         2016 to $36.8 billion by 2025. This represents a significant growth curve for the 9-year period
                         with a compound annual growth rate (CAGR) of 56.8%.
@@ -201,7 +196,7 @@
                         of the hedge fund assets traded by 2025 will be AI-driven. Even with the conservative estimate,
                         the algorithmic trading use case remains the top use case among the 191 use cases identified by
                         Tractica.
-                    </p>
+                    </p> -->
                 </div>
                 <div class="col-md-4">
                     <img src="images/subjects/AI.jpg" class="img-responsive">
@@ -226,9 +221,9 @@
                             <div class="col-md-4 col-sm-6 col-xs-12"><img src="images/subjects/AIS1.png"
                                     class="img-responsive">
                                 <h4 class="bottom15"><strong>Introduction to AIML</strong></h4>
-                                <p class="bottom15" style="text-align: justify;">This course aims at creating knowledge
-                                    on the basics of artificial
-                                    intelligence, importance of artificial intelligence in solving the problems.
+                                <p class="bottom15" style="text-align: justify;">This subject gives an overview on how
+                                    to create human interfaces applications which are simple to program, easily
+                                    understandable and maintainable.
                                 </p>
                             </div>
                         </div>
@@ -237,10 +232,9 @@
                             <div class="col-md-4 col-sm-6 col-xs-12"><img src="images/subjects/AIS2.jpg"
                                     class="img-responsive">
                                 <h4 class="bottom15"><strong>Machine learning</strong></h4>
-                                <p class="bottom15" style="text-align: justify;">This course provides an overview on how
-                                    to
-                                    choose a Machine Learning Algorithm and also helps to gain knowledge on the
-                                    techniques and models used in machine learning.
+                                <p class="bottom15" style="text-align: justify;">This subject provides an understanding
+                                    of machine learning algorithms. Here the audience will learn to Explore statistical
+                                    concepts such as probability, inference, and modelling and apply them in practice.
                                 </p>
                             </div>
                         </div>
@@ -250,10 +244,9 @@
                                     class="img-responsive">
                                 <h4 class="bottom15"><strong>Industry application development using machine
                                         learning</strong></h4>
-                                <p class="bottom15" style="text-align: justify;">This subject provides an overview of
-                                    the Machine Learning
-                                    applications in industries like
-                                    healthcare, manufacturing, retail, transport and other industries.
+                                <p class="bottom15" style="text-align: justify;">This course provides an overview on
+                                    using the machine learning technology to build an application for various industries
+                                    like healthcare, manufacturing, security, transport and others.
                                 </p>
                             </div>
                         </div>
@@ -290,36 +283,36 @@
 
     <!--login modal-->
     <div class="container">
-            <div class="modal fade" id="login" role="dialog" style="padding-right:0px;">
-                <div class="modal-dialog modal-sm">
-                    <div class="modal-content">
-                        <div class="modal-header headerColor">
-                            <button type="button" class="close modalClose" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title" style="color: white;">Sign-in</h4>
-                        </div>
-                        <div class="modal-body">
-                            <div class="row text-center">
-                                <div class="col-md-12" style="text-align: center;">
-                                    <a href="http://knowbots.phemesoft.com/" target="_blank" data-placement="bottom"
-                                        title="Click to login">
-                                        <img src="images/knowbots_logo.png" alt="Knowbots" class="logo">
-                                    </a>
-                                </div>
-                                <!-- <div class="col-md-6" style="text-align: center;">
+        <div class="modal fade" id="login" role="dialog" style="padding-right:0px;">
+            <div class="modal-dialog modal-sm">
+                <div class="modal-content">
+                    <div class="modal-header headerColor">
+                        <button type="button" class="close modalClose" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title" style="color: white;">Sign-in</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row text-center">
+                            <div class="col-md-12" style="text-align: center;">
+                                <a href="http://knowbots.phemesoft.com/" target="_blank" data-placement="bottom"
+                                    title="Click to login">
+                                    <img src="images/knowbots_logo.png" alt="Knowbots" class="logo">
+                                </a>
+                            </div>
+                            <!-- <div class="col-md-6" style="text-align: center;">
                                     <a href="http://www.phemesoft.com/" target="_blank" data-placement="bottom"
                                         title="Click to login">
                                         <img src="images/CATIA-logo.png" alt="CATIA" class="logo ">
                                     </a>
                                 </div> -->
-                            </div>
                         </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-basic" data-dismiss="modal">Cancel</a>
-                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-basic" data-dismiss="modal">Cancel</a>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
     <!-- modal end -->
 
 
@@ -338,9 +331,9 @@
                     <h3 class="heading bottom25">Quick Links<span class="divider-left"></span></h3>
                     <ul class="links">
                         <li><a href="index.html"><i class="icon-chevron-small-right"></i>Home</a></li>
-                        <li><a href="index.html"><i class="icon-chevron-small-right"></i>About Us</a></li>
-                        <li><a href="index.html"><i class="icon-chevron-small-right"></i>Courses</a></li>
-                        <li><a href="index.html"><i class="icon-chevron-small-right"></i>Contact Us</a></li>
+                        <li><a href="index.html#about"><i class="icon-chevron-small-right"></i>About Us</a></li>
+                        <li><a href="index.html#courses"><i class="icon-chevron-small-right"></i>Courses</a></li>
+                        <li><a href="index.html#contact"><i class="icon-chevron-small-right"></i>Contact Us</a></li>
                     </ul>
                 </div>
 
@@ -385,6 +378,14 @@
     <script src="js/revolution.extension.video.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/functions.js"></script>
+
+    <script>
+        var revapi;
+        revapi = jQuery("#rev_slider").revolution({
+            gridwidth: [1170, 960, 750, 480],
+            gridheight: [480, 600, 500, 390],
+        });
+    </script>
 
 </body>
 
