--- a/blockchain.html
+++ b/blockchain.html
@@ -65,9 +65,9 @@
                 <div class="collapse navbar-collapse" id="navbar-menu">
                     <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOut">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="index.html">About Us</a></li>
-                        <li><a href="index.html">Courses</a></li>
-                        <li><a href="index.html">Contact Us</a></li>
+                        <li><a href="index.html#about">About Us</a></li>
+                        <li><a href="index.html#courses">Courses</a></li>
+                        <li><a href="index.html#contact">Contact Us</a></li>
                         <!-- <li><a href="#">Registration</a></li> -->
                         <li><a style="cursor:pointer;" data-toggle="modal" data-target="#login">Login</a></li>
                     </ul>
@@ -79,7 +79,7 @@
     <!--Slider-->
     <section class="rev_slider_wrapper">
         <!-- START REVOLUTION SLIDER 5.0 auto mode -->
-        <div id="rev_slider" class="rev_slider" data-version="5.0" style="height: 460px;">
+        <div id="rev_slider" class="manage rev_slider" data-version="5.0" style="    height: 370px !important;">
             <ul>
                 <!-- SLIDE  -->
                 <li data-transition="fade">
@@ -125,9 +125,13 @@
             <div class="row">
                 <div class="col-md-12 priorty wow fadeInLeft text-center" data-wow-delay="300ms">
                     <h2 class="heading bottom25">Blockchain<span class="divider-center"></span></h2>
-                    <p class="half_space" style="text-align:justify;">Block chain is “an open, distributed ledger that
-                        can record transactions between two parties efficiently and in a verifiable and permanent way".
-                        Information held on a blockchain exists as a shared and continually reconciled database.
+                    <p class="half_space" style="text-align:justify;">This course provides an overview on the
+                        blockchain, the technologies involved in blockchain, the components of blockchain and its
+                        advantages. This course helps to gain knowledge on building the blockchain application using
+                        Hyperledger which includes composer framework model, composer API’s etc. It also
+                        evaluate if a business application will benefit by adoption of Distributed Ledger Technology.
+                        The development application in several industries such as banking, finance, healthcare is also
+                        presented here.
                     </p>
                 </div>
             </div>
@@ -140,15 +144,10 @@
             <div class="row">
                 <div class="col-md-12">
                     <h2 class="heading bottom25">Skills Required<span class="divider-left"></span></h2>
-                    <!-- <ul style="font-family: 'Roboto', sans-serif;">
-                                <li><i class="design fa fa-hand-o-right"></i>Basic Knowledge on Computer Technologies</li>
-                                <li><i class="design fa fa-hand-o-right"></i>Leadership skills</li>
-                                <li><i class="design fa fa-hand-o-right"></i>Communication skills</li>
-                                <li><i class="design fa fa-hand-o-right"></i>Physics</li>
-                                <li><i class="design fa fa-hand-o-right"></i>Engineering</li>
-                                <li><i class="design fa fa-hand-o-right"></i>Robotics</li>
-                                <li><i class="design fa fa-hand-o-right"></i>Graphic modelling</li>
-                            </ul> -->
+                    <ul style="font-family: 'Roboto', sans-serif;">
+                        <li><i class="design fa fa-hand-o-right"></i>Basic knowledge on cryptography</li>
+                        <li><i class="design fa fa-hand-o-right"></i>Programming</li>
+                    </ul>
                 </div>
                 <div class="col-md-6">
 
@@ -163,11 +162,14 @@
                 <div class="col-md-8">
                     <h2 class="heading bottom25">Market Forecast<span class="divider-left"></span></h2>
                     <p class="half_space" style="text-align: justify;">
-                        The global blockchain technology market size is expected to reach USD 7.59 billion by 2024,
+                        <!-- The global blockchain technology market size is expected to reach USD 7.59 billion by 2024,
                         according to a new report by Grand View Research, Inc., registering a 37.2% CAGR during the
                         forecast period. Increasing demand for this technology across financial services, consumer or
                         industrial products, technology, media and telecom, healthcare, transportation, and public
-                        sectors is largely responsible for market growth.
+                        sectors is largely responsible for market growth. -->
+                        The global blockchain technology market size is expected to reach USD 7.59 billion by 2024, 
+                        according to a new report by Grand View Research, Inc., registering a 37.2% CAGR during the 
+                        forecast period.
                     </p>
                 </div>
                 <div class="col-md-4">
@@ -193,10 +195,9 @@
                             <div class="col-md-4 col-sm-6 col-xs-12"><img src="images/subjects/BCS1.png"
                                     class="img-responsive">
                                 <h4 class="bottom15"><strong>Introduction to blockchain</strong></h4>
-                                <p class="bottom15" style="text-align: justify;">The purpose of this subject is to
-                                    develop the capability to clearly
-                                    distinguish the
-                                    blockchain technology from the traditional technology.
+                                <p class="bottom15" style="text-align: justify;">This subject provides an overview of
+                                    blockchain, the concept of blockchain technology and its benefits to business is
+                                    also presented.
                                 </p>
                             </div>
                         </div>
@@ -205,9 +206,9 @@
                             <div class="col-md-4 col-sm-6 col-xs-12"><img src="images/subjects/BCS2.jpg"
                                     class="img-responsive">
                                 <h4 class="bottom15"><strong>Blockchain applications using hyperledger</strong></h4>
-                                <p class="bottom15" style="text-align: justify;">Evaluate if a business application will
-                                    benefit by adoption of
-                                    Distributed Ledger Technology.
+                                <p class="bottom15" style="text-align: justify;">This subject provides an overview on
+                                    how to develop hyper-ledger Blockchain applications using Composer Framework Model,
+                                    develop front end (Client) applications using Composer API.
                                 </p>
                             </div>
                         </div>
@@ -217,9 +218,9 @@
                                     class="img-responsive">
                                 <h4 class="bottom15"><strong>Industry application development using blockchain</strong>
                                 </h4>
-                                <p class="bottom15" style="text-align: justify;">Applications of blockchain are:
-                                    Finance, Government, Healthcare,
-                                    IoT, Insurance, Real estate, Supply chain and similar industries.
+                                <p class="bottom15" style="text-align: justify;">This subject introduces to the
+                                    blockchain with industry applications such as education, finance, government,
+                                    healthcare, IoT, insurance, real estate, retail, supply chain and others.
                                 </p>
                             </div>
                         </div>
@@ -255,36 +256,36 @@
 
     <!--login modal-->
     <div class="container">
-            <div class="modal fade" id="login" role="dialog" style="padding-right:0px;">
-                <div class="modal-dialog modal-sm">
-                    <div class="modal-content">
-                        <div class="modal-header headerColor">
-                            <button type="button" class="close modalClose" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title" style="color: white;">Sign-in</h4>
-                        </div>
-                        <div class="modal-body">
-                            <div class="row text-center">
-                                <div class="col-md-12" style="text-align: center;">
-                                    <a href="http://knowbots.phemesoft.com/" target="_blank" data-placement="bottom"
-                                        title="Click to login">
-                                        <img src="images/knowbots_logo.png" alt="Knowbots" class="logo">
-                                    </a>
-                                </div>
-                                <!-- <div class="col-md-6" style="text-align: center;">
+        <div class="modal fade" id="login" role="dialog" style="padding-right:0px;">
+            <div class="modal-dialog modal-sm">
+                <div class="modal-content">
+                    <div class="modal-header headerColor">
+                        <button type="button" class="close modalClose" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title" style="color: white;">Sign-in</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row text-center">
+                            <div class="col-md-12" style="text-align: center;">
+                                <a href="http://knowbots.phemesoft.com/" target="_blank" data-placement="bottom"
+                                    title="Click to login">
+                                    <img src="images/knowbots_logo.png" alt="Knowbots" class="logo">
+                                </a>
+                            </div>
+                            <!-- <div class="col-md-6" style="text-align: center;">
                                     <a href="http://www.phemesoft.com/" target="_blank" data-placement="bottom"
                                         title="Click to login">
                                         <img src="images/CATIA-logo.png" alt="CATIA" class="logo ">
                                     </a>
                                 </div> -->
-                            </div>
                         </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-basic" data-dismiss="modal">Cancel</a>
-                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-basic" data-dismiss="modal">Cancel</a>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
     <!-- modal end -->
 
 
@@ -303,9 +304,9 @@
                     <h3 class="heading bottom25">Quick Links<span class="divider-left"></span></h3>
                     <ul class="links">
                         <li><a href="index.html"><i class="icon-chevron-small-right"></i>Home</a></li>
-                        <li><a href="index.html"><i class="icon-chevron-small-right"></i>About Us</a></li>
-                        <li><a href="index.html"><i class="icon-chevron-small-right"></i>Courses</a></li>
-                        <li><a href="index.html"><i class="icon-chevron-small-right"></i>Contact Us</a></li>
+                        <li><a href="index.html#about"><i class="icon-chevron-small-right"></i>About Us</a></li>
+                        <li><a href="index.html#courses"><i class="icon-chevron-small-right"></i>Courses</a></li>
+                        <li><a href="index.html#contact"><i class="icon-chevron-small-right"></i>Contact Us</a></li>
                     </ul>
                 </div>
 
@@ -350,6 +351,14 @@
     <script src="js/revolution.extension.video.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/functions.js"></script>
+
+    <script>
+        var revapi;
+        revapi = jQuery("#rev_slider").revolution({
+            gridwidth: [1170, 960, 750, 480],
+            gridheight: [480, 600, 500, 390],
+        });
+    </script>
 
 </body>
 
